# hexapod_ws

./: .editorconfig  .gitignore  LICENSE  README.md
src/adafruit/src/i2c/include/: i2c-peripheral.h
src/hexapod_description/: CMakeLists.txt  package.xml
src/hexapod_description/launch/: display.launch
src/hexapod_description/meshes/dae/: L_coxa_shape.dae  L_femur_shape.dae  L_tibia_shape.001.dae  L_tibia_shape.002.dae  L_tibia_shape.003.dae  L_tibia_shape.dae  R_coxa_shape.dae  R_femur_shape.dae  R_tibia_shape.001.dae  R_tibia_shape.002.dae  R_tibia_shape.003.dae  R_tibia_shape.dae  foot_shape.dae  thorax_shape.dae
src/hexapod_description/urdf/: Hexapod.urdf  Hexapod_base.urdf  Hexapod_gazebo.urdf
src/hexapod_joypad/: CMakeLists.txt  package.xml
src/hexapod_joypad/launch/: hexapod_joypad.launch
src/hexapod_joypad/src/: buttonsname.h  controller_node.cc  joypad.cc  joypad.h  joypad_button.cc  joypad_button.h  joypad_thumbstick.cc  joypad_thumbstick.h  joypad_trigger.cc  joypad_trigger.h
src/hexapod_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/hexapod_moveit_config/config/: Hexapod.srdf  fake_controllers.yaml  hexapod_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml
src/hexapod_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
src/hexapod_msgs/: CMakeLists.txt  package.xml
src/hexapod_msgs/msg/: JoypadButton.msg  JoypadThumbstick.msg  JoypadTrigger.msg
src/hexapod_servomotor/: CMakeLists.txt  package.xml
src/hexapod_servomotor/config/: homing.lua  motors.lua  servoconfiguration.yaml
src/hexapod_servomotor/include/: PCA9685_driver.h  PCA9685_register.h  motor.h  servocontroller.h  utility_function.h
src/hexapod_servomotor/launch/: hexapod_servomotor.launch
src/hexapod_servomotor/src/: PCA9685_driver.cc  i2c-peripheral.cc  main.cc  motor.cc  servocontroller.cc
src/joypad-control/: CMakeLists.txt  package.xml
src/joypad-control/launch/: joypad-control.launch  joypad-controller.launch
src/joypad-control/src/: body.h  buttonsmap_ps3joy.h  buttonsname.h  controller_node.cc  joypad.cc  joypad.h  joypad_button.cc  joypad_button.h  joypad_thumbstick.cc  joypad_thumbstick.h  joypad_trigger.cc  joypad_trigger.h  map_buttons.h
(+5 files in other folders)
